# secure-app-framework

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: build.yml  ci.yml  security.yml
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/broker/: Cargo.toml
crates/broker/src/: main.rs  wasmtime_host.rs  workspace_picker.rs
crates/component-demo/: Cargo.toml
crates/component-demo/src/: bindings.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: index.html  lib.rs
crates/ui/src-tauri/: tauri.conf.json
crates/wit/: world.wit
scripts/: build.sh  checks.sh  env.sh
