[package]
name = "broker"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
saf-core = { path = "../core" }
saf-policy = { path = "../policy" }
saf-audit = { path = "../audit" }

[[bin]]
name = "broker"
path = "src/main.rs"

[features]
default = []
# Placeholder feature for future Wasmtime integration; deps will be added when network is available.
wasmtime-host = []
