[package]
name = "broker"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
saf-core = { path = "../core" }
saf-policy = { path = "../policy" }
saf-audit = { path = "../audit" }
anyhow = { version = "1", optional = true }
wasmtime = { version = "21", optional = true, default-features = false, features = ["component-model"] }
wasmtime-wasi = { version = "21", optional = true }
rand = { version = "0.8", optional = true }

[[bin]]
name = "broker"
path = "src/main.rs"

[features]
default = []
# Wasmtime integration for running components
wasmtime-host = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:anyhow", "dep:rand"]
