[package]
name = "broker"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
saf-core = { path = "../core" }
saf-policy = { path = "../policy" }
saf-audit = { path = "../audit" }
anyhow = { version = "1", optional = true }
wasmtime = { version = "21", optional = true, default-features = false, features = ["component-model"] }
wasmtime-wasi = { version = "21", optional = true }
rand = { version = "0.8", optional = true }
tauri = { version = "2.0", features = [], optional = true }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
base64 = "0.22"
url = "2.5"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.9"  # For xdg-desktop-portal

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Storage", "Storage_Provider"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"
objc-foundation = "0.1"

[[bin]]
name = "broker"
path = "src/main.rs"

[features]
default = []
# UI integration
ui = ["dep:tauri"]
# Wasmtime integration for running components
wasmtime-host = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:anyhow", "dep:rand"]
